--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -164,8 +164,17 @@
 }
 
 .about-section {
+  position: relative;
+  width: 100%;
+  height: auto;
+  min-height: 35rem;  
   padding-top: 10rem;
-  background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
+  padding-bottom: 15rem;
+  background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 60%, rgba(22, 22, 22, 0.8) 100%), url("https://res.cloudinary.com/sehnsucht/image/upload/c_crop,h_1500,q_100,w_3304,y_634/v1584429877/cityscape/midtown_cloudy.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
 }
 
 .about-section p {
