--- a/css/anemoia.css
+++ b/css/anemoia.css
@@ -1,90 +1,85 @@
-/*!
- * Start Bootstrap - Grayscale v5.0.9 (https://startbootstrap.com/template-overviews/grayscale)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
- */
-
- #mainNav {
+#mainNav {
     min-height: 56px;
     background-color: #fff;
-  }
-  
-  #mainNav .navbar-toggler {
+}
+
+#mainNav .navbar-toggler {
     font-size: 80%;
     padding: 0.75rem;
     color: #64a19d;
     border: 1px solid #64a19d;
-  }
-  
-  #mainNav .navbar-toggler:focus {
+}
+
+#mainNav .navbar-toggler:focus {
     outline: none;
-  }
-  
-  #mainNav .navbar-brand {
+}
+
+#mainNav .navbar-brand {
     color: #161616;
     font-weight: 700;
     padding: .9rem 0;
-  }
-  
-  #mainNav .navbar-nav .nav-item:hover {
+}
+
+#mainNav .navbar-nav .nav-item:hover {
     color: fade(white, 80%);
     outline: none;
     background-color: transparent;
-  }
-  
-  #mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
+}
+
+#mainNav .navbar-nav .nav-item:active,
+#mainNav .navbar-nav .nav-item:focus {
     outline: none;
     background-color: transparent;
-  }
-  
-  @media (min-width: 992px) {
+}
+
+@media (min-width: 992px) {
     #mainNav {
-      padding-top: 0;
-      padding-bottom: 0;
-      border-bottom: none;
-      background-color: transparent;
-      transition: background-color 0.3s ease-in-out;
+        padding-top: 0;
+        padding-bottom: 0;
+        border-bottom: none;
+        background-color: transparent;
+        transition: background-color 0.3s ease-in-out;
     }
     #mainNav .navbar-brand {
-      padding: .5rem 0;
-      color: rgba(255, 255, 255, 0.5);
+        padding: .5rem 0;
+        color: rgba(255, 255, 255, 0.5);
     }
     #mainNav .nav-link {
-      transition: none;
-      padding: 2rem 1.5rem;
-      color: rgba(255, 255, 255, 0.5);
+        transition: none;
+        padding: 2rem 1.5rem;
+        color: rgba(255, 255, 255, 0.5);
     }
     #mainNav .nav-link:hover {
-      color: rgba(255, 255, 255, 0.75);
+        color: rgba(255, 255, 255, 0.75);
     }
     #mainNav .nav-link:active {
-      color: white;
+        color: white;
     }
     #mainNav.navbar-shrink {
-      background-color: #fff;
+        background-color: #fff;
     }
     #mainNav.navbar-shrink .navbar-brand {
-      color: #161616;
+        color: #161616;
     }
     #mainNav.navbar-shrink .nav-link {
-      color: #161616;
-      padding: 1.5rem 1.5rem 1.25rem;
-      border-bottom: 0.25rem solid transparent;
+        color: #161616;
+        padding: 1.5rem 1.5rem 1.25rem;
+        border-bottom: 0.25rem solid transparent;
     }
     #mainNav.navbar-shrink .nav-link:hover {
-      color: #64a19d;
+        color: #64a19d;
     }
     #mainNav.navbar-shrink .nav-link:active {
-      color: #467370;
+        color: #467370;
     }
     #mainNav.navbar-shrink .nav-link.active {
-      color: #64a19d;
-      outline: none;
-      border-bottom: 0.25rem solid #64a19d;
+        color: #64a19d;
+        outline: none;
+        border-bottom: 0.25rem solid #64a19d;
     }
-  }
-  
-  .masthead {
+}
+
+.masthead {
     position: relative;
     width: 100%;
     height: auto;
@@ -95,9 +90,9 @@
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
-  }
-  
-  .masthead h1 {
+}
+
+.masthead h1 {
     font-family: 'Varela Round';
     font-size: 2.5rem;
     line-height: 2.5rem;
@@ -106,37 +101,37 @@
     background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-  }
-  
-  .masthead h2 {
+}
+
+.masthead h2 {
     max-width: 20rem;
     font-size: 1rem;
-  }
-  
-  @media (min-width: 768px) {
+}
+
+@media (min-width: 768px) {
     .masthead h1 {
-      font-size: 4rem;
-      line-height: 4rem;
+        font-size: 4rem;
+        line-height: 4rem;
     }
-  }
-  
-  @media (min-width: 992px) {
+}
+
+@media (min-width: 992px) {
     .masthead {
-      height: 100vh;
-      padding: 0;
+        height: 100vh;
+        padding: 0;
     }
     .masthead h1 {
-      font-size: 6.5rem;
-      line-height: 6.5rem;
-      letter-spacing: 0.8rem;
+        font-size: 6.5rem;
+        line-height: 6.5rem;
+        letter-spacing: 0.8rem;
     }
     .masthead h2 {
-      max-width: 30rem;
-      font-size: 1.25rem;
+        max-width: 30rem;
+        font-size: 1.25rem;
     }
-  }
-  
-  .btn {
+}
+
+.btn {
     box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
     padding: 1.25rem 2rem;
     font-family: 'Varela Round';
@@ -144,30 +139,30 @@
     text-transform: uppercase;
     letter-spacing: .15rem;
     border: 0;
-  }
-  
-  .btn-primary {
+}
+
+.btn-primary {
     background-color: #64a19d;
-  }
-  
-  .btn-primary:hover {
+}
+
+.btn-primary:hover {
     background-color: #4f837f;
-  }
-  
-  .btn-primary:focus {
+}
+
+.btn-primary:focus {
     background-color: #4f837f;
     color: white;
-  }
-  
-  .btn-primary:active {
+}
+
+.btn-primary:active {
     background-color: #467370 !important;
-  }
-  
-  .about-section {
+}
+
+.about-section {
     position: relative;
     width: 100%;
     height: auto;
-    min-height: 35rem;  
+    min-height: 35rem;
     padding-top: 10rem;
     padding-bottom: 10rem;
     background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 60%, rgba(22, 22, 22, 0.8) 100%), url("https://res.cloudinary.com/sehnsucht/image/upload/c_crop,h_1500,q_100,w_3304,y_634/v1584429877/cityscape/midtown_cloudy.png");
@@ -175,70 +170,70 @@
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
-  }
-  
-  .about-section p {
+}
+
+.about-section p {
     margin-bottom: 5rem;
-  }
-  
-  .gallery-section { 
+}
+
+.gallery-section {
     padding: 10rem 0;
-  }
-  
-  .gallery-section .featured-text {
+}
+
+.gallery-section .featured-text {
     padding: 2rem;
-  }
-  
-  @media (min-width: 992px) {
+}
+
+@media (min-width: 992px) {
     .gallery-section .featured-text {
-      padding: 0 0 0 2rem;
-      border-left: 0.5rem solid #64a19d;
+        padding: 0 0 0 2rem;
+        border-left: 0.5rem solid #64a19d;
     }
-  }
-  
-  .gallery-section .gallery-text { 
+}
+
+.gallery-section .gallery-text {
     padding: 3rem;
     font-size: 90%;
-  }
-  
-  @media (min-width: 992px) {
+}
+
+@media (min-width: 992px) {
     .gallery-section .gallery-text {
-      padding: 5rem;
+        padding: 5rem;
     }
     .gallery-section .gallery-text hr {
-      border-color: #64a19d;
-      border-width: .25rem;
-      width: 30%;
+        border-color: #64a19d;
+        border-width: .25rem;
+        width: 30%;
     }
-  }
-  
-  .contact-section {
+}
+
+.contact-section {
     padding: 5rem 0 0;
-  }
-  
-  .contact-section .card {
+}
+
+.contact-section .card {
     border: 0;
     border-bottom: 0.25rem solid #64a19d;
-  }
-  
-  .contact-section .card h4 {
+}
+
+.contact-section .card h4 {
     font-size: 0.8rem;
     font-family: 'Varela Round';
     text-transform: uppercase;
     letter-spacing: 0.15rem;
-  }
-  
-  .contact-section .card hr {
+}
+
+.contact-section .card hr {
     border-color: #64a19d;
     border-width: 0.25rem;
     width: 3rem;
-  }
-  
-  .contact-section .social {
+}
+
+.contact-section .social {
     margin-top: 5rem;
-  }
-  
-  .contact-section .social a {
+}
+
+.contact-section .social a {
     text-align: center;
     height: 3rem;
     width: 3rem;
@@ -246,43 +241,43 @@
     border-radius: 100%;
     line-height: 3rem;
     color: rgba(255, 255, 255, 0.3);
-  }
-  
-  .contact-section .social a:hover {
+}
+
+.contact-section .social a:hover {
     color: rgba(255, 255, 255, 0.5);
-  }
-  
-  .contact-section .social a:active {
+}
+
+.contact-section .social a:active {
     color: #fff;
-  }
-  
-  body {
+}
+
+body {
     font-family: 'Nunito';
     letter-spacing: 0.0625em;
-  }
-  
-  a {
+}
+
+a {
     color: #64a19d;
-  }
-  
-  a:focus, a:hover {
+}
+
+a:focus,
+a:hover {
     text-decoration: none;
     color: #3c6360;
-  }
-  
-  .bg-black {
+}
+
+.bg-black {
     background-color: #161616 !important;
-  }
-  
-  .bg-primary {
+}
+
+.bg-primary {
     background-color: #64a19d !important;
-  }
-  
-  .text-primary {
+}
+
+.text-primary {
     color: #64a19d !important;
-  }
-  
-  footer {
+}
+
+footer {
     padding: 5rem 0;
-  }
-  
+}
